implements HTTP POST node endpoint
